<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<!--
Copyright (C) 2025 Intel Corporation

SPDX-License-Identifier: Apache-2.0
-->

<package format="3">
  <name>robot_config_plugins</name>
  <version>3.6.0</version>
  <description>
    Clear ROS2 Namespace from Gazebo process and Vacuum Gripper Plugin
  </description>
  <maintainer email="eci.maintainer@intel.com">ECI Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  
  <!-- Core ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Gazebo dependencies -->
  <depend>ros_gz</depend>
  <depend condition="$ROS_DISTRO == jazzy">gz_sim_vendor</depend>

  <!-- ros2_control dependencies -->
  <exec_depend condition="$ROS_DISTRO == humble">gazebo_ros2_control</exec_depend>
  <exec_depend condition="$ROS_DISTRO == jazzy">gz_ros2_control</exec_depend>
  
  <!-- Core ros2_control packages -->
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- MoveIt dependencies -->
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  
  <!-- Navigation2 dependencies -->
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
